[package]
name = "ewwdot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksway = "0.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
anyhow = "1.0.56"
dbus = "0.9.5"
clap = { version = "3.1", features = ["derive"] }